// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorImage renders correctly with all info 1`] = `
<figure
  css={
    Array [
      "
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        display: block;
        position: absolute;
        top: -40px;
        left: 50%;
        margin-left: -40px;
        width: 80px;
        height: 80px;
        border-radius: 100%;
        overflow: hidden;
        padding: 6px;
        background: #fff;
        box-shadow: #e7eef2 0 0 0 1px;
        @media only screen and (max-width: 500px) {
          top: -60px;
        }
      ",
    ]
  }
>
  <a
    className="img"
    css={
      Array [
        "
            position: relative;
            display: block;
            width: 100%;
            height: 100%;
            background-size: cover;
            background-position: center center;
            border-radius: 100%;
            background-image: url(\\"",
        "https://assets-us-01.kc-usercontent.com:443/3fcf700a-30e8-4d1d-9e64-43193a89fe7a/f7377b84-8ff0-4b77-bc0f-cfdc34d379cc/quixote.jpg?w=100&h=100&auto=format",
        "\\");
          ",
      ]
    }
    href="/aaron-collier"
  >
    <span
      className="sr-only"
    >
      Aaron Collier's Picture
    </span>
  </a>
</figure>
`;

exports[`AuthorImage renders correctly without name or url 1`] = `null`;

exports[`AuthorImage renders correctly without url 1`] = `
<figure
  css={
    Array [
      "
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        display: block;
        width: 80px;
        height: 80px;
        margin: 0 0 1rem 0;
        border-radius: 100%;
        overflow: hidden;
        background: #fff;
        box-shadow: #e7eef2 0 0 0 1px;
        @media only screen and (max-width: 500px) {
          top: -60px;
        }
      ",
    ]
  }
>
  <img
    alt="Aaron Collier's Picture"
    css={
      Array [
        "
            position: relative;
            display: block;
            width: 100%;
            height: 100%;
            background-size: cover;
            background-position: center center;
            border-radius: 100%;  
          ",
      ]
    }
    src="https://assets-us-01.kc-usercontent.com:443/3fcf700a-30e8-4d1d-9e64-43193a89fe7a/f7377b84-8ff0-4b77-bc0f-cfdc34d379cc/quixote.jpg?w=100&h=100&auto=format"
  />
</figure>
`;
